frontend/portfolio-app/src/css/Custom.css
/* Custom CSS for entire project */


/* WHOLE PAGE */

body {
    background-color: #3a3a3a;
}


/* BUTTONS */

.btn {
    background-color: #3a3a3a;
    border: none;
}

.btn:hover {
    background-color: black;
}


/* PAGE HEADER */

.site-title {
    background-color: ghostwhite;
    text-align: center;
    padding: 50px;
}


/* NAVBAR & OFF-CANVAS */

.navbar {
    background-color: grey;
    padding: 10px;
}

.navbar-brand {
    font-size: 2em;
}

.nav-item {
    margin-right: 5px;
}

.nav-link {
    color: black;
    font-size: 1.5em;
    padding: 20px;
}

.nav-link:hover {
    background-color: grey;
    color: ghostwhite;
    border-radius: 5px 5px;
}

.offcanvas {
    background-color: ghostwhite;
}

.offcanvas-header {
    background-color: grey;
}


/* CONTENT SECTIONS */

.content-section {
    background-color: ghostwhite;
    text-align: center;
    font-size: 1.5em;
    padding: 50px;
}


/* PROJECT CARDS */
.card {

}

/* FOOTER */

#footer {
    background-color: grey;
    color: ghostwhite;
    text-align: center;
    padding: 10px;
    font-size: 1.2em;
}

